k8s/backend.yaml
# backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: thaiha-guestbook-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: thaiha-backend
  template:
    metadata:
      labels:
        app: thaiha-backend
    spec:
      containers:
        - name: thaiha-backend
          image: ghcr.io/thaiha-hub/thaiha-guestbook-backend:08fd274c9e4bc42eef045e80061cbfbf33925e75
          ports:
            - containerPort: 8080
          resources:
              requests:
                cpu: "100m"
                memory: "128Mi"
              limits:
                cpu: "200m"
                memory: "256Mi"
