k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: thaiha-guestbook-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: thaiha-frontend
  template:
    metadata:
      labels:
        app: thaiha-frontend
    spec:
      containers:
        - name: frontend
          image: ghcr.io/thaiha-hub/thaiha-guestbook-frontend:08fd274c9e4bc42eef045e80061cbfbf33925e75
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "100m"
              memory: "128Mi"
