k8s/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: thaiha-guestbook-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: thaiha-postgres
  template:
    metadata:
      labels:
        app: thaiha-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "300m"
              memory: "512Mi"

      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: thaiha-postgres-pvc
