k8s/route.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: thaiha-frontend
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: thaiha-frontend
                port:
                  number: 80
